// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vue Bindings Connect should map actions to props 1`] = `
<div>
  <h1>
    false
  </h1>
  <button />
</div>
`;

exports[`Vue Bindings Connect should map state to props 1`] = `
<div>
  <h1>
    true
  </h1>
  <button />
</div>
`;

exports[`Vue Bindings Connect should map state to props 2`] = `
<div>
  <h1>
    false
  </h1>
  <button />
</div>
`;

exports[`Vue Bindings Install should add $store on creates when a  1`] = `
Object {
  "action": [Function],
  "getState": [Function],
  "setState": [Function],
  "subscribe": [Function],
  "unsubscribe": [Function],
}
`;

exports[`Vue Bindings should pass a smoke test on fire. 1`] = `
<h2>
  hey
</h2>
`;
